# django_meilisearch

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
01.index/: index.html
02.installation/: index.html
03.configuration/: index.html
04.basic_usage/: index.html
05.advanced_features/: index.html
06.contributing/: index.html
07.license/: index.html
advanced_features/: index.html
basic_usage/: index.html
configuration/: index.html
contributing/: index.html
docs/: 01.index.md  04.basic_usage.md  05.advanced_features.md  advanced_features.md  basic_usage.md  configuration.md  contributing.md  index.md  installation.md  license.md
installation/: index.html
license/: index.html
scripts/: check.py
search/: search_index.json
src/: manage.py
src/api/: apps.py  documents.py  index.py  indexes.py  models.py  urls.py  views.py
src/api/fixtures/: posts.json
src/api/migrations/: 0001_initial.py
src/api/tests/: test_.py  test_cli_actions.py
src/api/tests/data/: posts.json
src/django_meilisearch/: __init__.py  apps.py  doctype.py  documents.py  exceptions.py  index.py  indexes.py  metaclass.py  serializers.py  types.py  urls.py  utils.py  validators.py
src/django_meilisearch/management/commands/: meili.py  meilisearch.py
src/django_meilisearch/tests/: test_.py  test_cli_actions.py  test_instantiate_index.py  test_search_method.py  test_signals.py
src/django_meilisearch/tests/test_serializers/: test_timestampfield_serializer.py
src/example/: admin.py  apps.py  indexes.py  views.py
src/example/fixtures/: posts.json
src/example/tests/: test_cli_actions.py  test_handle_single_document.py  test_instantiate_index.py  test_search_method.py  test_signals.py
src/example/tests/test_optional_flags/: test_indexing_batch_size_flag.py  test_use_timestamp_flag.py
src/mysite/: settings.py  urls.py
