[tool.poetry]
name = "django-meilisearch"
version = "0.1.0"
description = ""
authors = ["Lucas Rocha <lucash.rocha@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4"
meilisearch = "^0.31.4"
alive-progress = "^3.1.5"
djangorestframework = "^3.15.2"
camel-converter = "^4.0.1"
poetry = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
black = "^24.4.2"
taskipy = "^1.12.2"
pylint = "^3.1.0"
mypy = "^1.11.2"
django-stubs = {extras = ["compatible-mypy"], version = "^5.0.4"}
pylint-django = "^2.5.5"
mkdocs = "^1.6.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.taskipy.tasks]
serve = "python src/manage.py runserver"
format = "black src"
lint = "pylint src"
check = "mypy src"
test = "pytest -v"
cov = "coverage run -m pytest && coverage html"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
python_files = ["test_*", "*_test", "tests/*"]
pythonpath = ["src"]

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.pylint]
load-plugins = ["pylint_django"]
django-settings-module = "mysite.settings"
ignore = ["migrations"]

[tool.poetry.scripts]
check = "scripts.check:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

